[package]
name = "nibble-torrent-client-hurricaneport"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
httparse = "1.10.1"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.145"
sha1 = "0.10.6"
simple_logger = "5.1.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
